kozo/src/syntax_tree/parser/tests/snapshots/kozo__syntax_tree__parser__tests__match___missing_return_type.snap
---
source: src/syntax_tree/parser/tests/match_.rs
expression: "&err"
---
Some(
    ContraKw(
        ByteIndex(
            99,
        ),
    ),
)
