kozo/src/syntax_tree/parser/tests/snapshots/kozo__syntax_tree__parser__tests__match___non_numeric_econ_extension_length.snap
---
source: src/syntax_tree/parser/tests/match_.rs
expression: "&err"
---
Some(
    LParen(
        ByteIndex(
            69,
        ),
    ),
)
