kozo/src/syntax_tree/parser/tests/snapshots/kozo__syntax_tree__parser__tests__match___non_parenthesized_cases.snap
---
source: src/syntax_tree/parser/tests/match_.rs
expression: "&err"
---
Some(
    Number(
        NumberLiteral {
            value: 0,
            span: (
                ByteIndex(
                    48,
                ),
                ByteIndex(
                    49,
                ),
            ),
        },
    ),
)
